# bni47-passport

./: .gcloudignore  .gitignore  DEPLOYMENT.md  GCP_SETUP_QUICK.md  README.md  RENDER_DEPLOY.md  render.yaml
.claude/: settings.local.json
.github/workflows/: deploy-cloud-run.yml  keep-warm.yml  refresh-google-token.yml  render-deploy.yml
backend/: .env.example  .env.production.example  Dockerfile  auth.py  database.py  fix_booking.py  get_google_token.py  main.py  migrate_add_reset_token.py  models.py  pyproject.toml  requirements.txt  seed.py  test_calendar.py  test_email.py
backend/routers/: admin.py  auth.py  availability.py  bookings.py  mentors.py
backend/services/: email_service.py  google_calendar.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  MentorSetup.tsx  Register.tsx  ResetPassword.tsx  Schedule.tsx
